--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 			<p>The most common term is independent-film, a feature film that is produced mostly or completely outside of the major film studio system.</p>
 			<p>Films based on a novel enjoy the popularity.</p>
 			<p><img alt="Most common keywords by genre" src="images/kwdsbygenre.png"></p>
-			<p>More general terms <em>murder</em>, <em>female-nudity</em>, <em>sex</em> and <em>death</em> describe what the most films are about: murders and sex.</p>
+			<p>More general terms <strong>murder</strong>, <strong>female-nudity</strong>, <strong>sex</strong> and <strong>death</strong> describe what the most films are about: murders and sex.</p>
 			<p>Keywords provided by IMDB highly correlate with contents of entire genres. The most common words of science fiction are alien, outer-space, monster, and robot. Horror films can be mainly described by terms murder, death, and blood. Terms murder and police are on the top of crime genre. The term murder is also very frequent in dramas. War films commonly show WWII and nazis.</p>
 			<p><img alt="Keywords of top 250" src="images/kwdstop250.png"></p>
 			<p>The most profitable movies are biased towards particular terms.</p>
