--- a/index.html
+++ b/index.html
@@ -684,8 +684,9 @@
 			<p>Each coloured node (and edge) belong to community 0, and their colour depends upon degree. All grey-coloured nodes (and edges) belong to other communities. We can discover the almost perfect partition. We recognize it by the cardinality of links within nodes of the same community (strong boundaries of coloured sections) being higher than the cardinality of links to other communities.</p>
 			
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
-			<p>Now we are going to dig a little deeper into contents of movies to answer whether there is a correlation between keywords provided by IMDB and plots, and whether actors tend to act in movies of the same contents. The general idea is that actors play in movies that have related content.</p>
+			<p>Now we are going to dig a little deeper into contents of movies to answer whether there is a correlation between keywords provided by IMDB and plots, and whether actors tend to act in movies of the same contents.</p>
 			<h3><a aria-hidden="true" class="anchor" href="#keywords" id="keywords"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keywords</h3>
+			<p>First of all we will discover keywords provided by IMDB.</p>
 			<h4>The most common keywords</h4>
 			<p><img alt="The most common keywords" src="images/mckwds.png"></p>
 			<p>The most common term is <em>independent-film</em>, a feature film that is produced mostly or completely outside of the major film studio system.</p>
