--- a/index.html
+++ b/index.html
@@ -687,14 +687,15 @@
 			<p>Now we are going to dig a little deeper into contents of movies to answer whether there is a correlation between keywords provided by IMDB and plots, and whether actors tend to act in movies of the same contents.</p>
 			<h3><a aria-hidden="true" class="anchor" href="#keywords" id="keywords"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keywords</h3>
 			<p>First of all we will discover keywords provided by IMDB.</p>
-			<h4>The most common keywords</h4>
+			<h4>Most common</h4>
 			<p><img alt="The most common keywords" src="images/mckwds.png"></p>
 			<p>The most common term is <em>independent-film</em>, a feature film that is produced mostly or completely outside of the major film studio system.</p>
 			<p>Films based on a novel enjoy the popularity.</p>
+			<h4>By genre</h4>
 			<p><img alt="Most common keywords by genre" src="images/kwdsbygenre.png"></p>
 			<p>More general terms <em>murder</em>, <em>female-nudity</em>, <em>sex</em> and <em>death</em> describe what the most films are about: murders and sex.</p>
 			<p>Keywords provided by IMDB highly correlate with contents of entire genres. The most common words of science fiction are <em>alien</em>, <em>outer-space</em>, <em>monster</em>, and <em>robot</em>. Horror films can be mainly described by terms <em>murder</em>, <em>death</em>, and <em>blood</em>. Terms <em>murder</em> and <em>police</em> are on the top of crime genre. The term <em>murder</em> is also very frequent in dramas. War films commonly show <em>WWII</em> and <em>nazis</em>.</p>
-			<h4>Keywords in top 250</h4>
+			<h4>Top 250 movies</h4>
 			<p><img alt="Keywords of top 250" src="images/kwdstop250.png"></p>
 			<p>The most profitable movies are biased towards particular terms.</p>
 			<p><em>Explosion</em> is one of the most frequent words for the most expensive movies. The more a production company has money, the more it invests in special effects, and the more explosions it shows. Across top 250 films by gross the most promising are blockbusters. Box-office-hit keyword (describing a highly-grossing picture) is also the most common in top 250 films by budget. All those keywords are less common for movies with the highest IMDB ratings though, where the independent-film and mockumentary (parody) top the list.</p>
