--- a/index.html
+++ b/index.html
@@ -701,6 +701,11 @@
 			<p><em>Explosion</em> is one of the most frequent words for the most expensive movies. The more a production company has money, the more it invests in special effects, and the more explosions it shows. Across top 250 films by gross the most promising are blockbusters. Box-office-hit keyword (describing a highly-grossing picture) is also the most common in top 250 films by budget. All those keywords are less common for movies with the highest IMDB ratings though, where the independent-film and mockumentary (parody) top the list.</p>
 			<p>The most successful and top-rated films seem to differ a lot, they even mirror opposite trends: almost none of the keyword <em>independent-film</em> are present in the keywords set of the most expensive and profitable movies. On the other side, none of the term <em>box-office-hit</em> are in top-rated films. The same observation we do wenn we look at word <em>love</em>. Quite a lot of top-rated movies are about love, but only a bunch of most successful films are (which are mainly blockbusters with breathtaking explosions), that is, the top-rated films interact with feelings of watchers and trigger sympathy.</p>
 			<h4>Similarity</h4>
+			<p>Next we want to test the similarity of film contents based on keywords. We do this by vectorization.</p> 
+			<blockquote>
+				<p>Vectorization is the general process of turning a collection of text documents into numerical feature vectors.</p>
+			</blockquote>
+			<p>Documents in our case are sets of keywords that are described by keyword occurrences while completely ignoring the relative position information of the keywords in the set.</p>
 			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="https://plot.ly/~polakowo/20.embed"></iframe>
 			<p>The most movies - <span class="Number">73%</span> - aren't similar regarding keywords, meaning that keywords are maybe to concrete for a similarity measure. But, having seen those keywords anywhere, you will be able to identify the movie right away.</p>
 			<table>
