--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 			<blockquote>
 				<p>Vectorization is the general process of turning a collection of text documents into numerical feature vectors.</p>
 			</blockquote>
-			<p>Documents in our case are sets of keywords that are described by keyword occurrences while completely ignoring the relative position information of the keywords in the set.</p>
+			<p>Documents in our case are sets of keywords that are described by keyword occurrences while completely ignoring the relative position information of the keywords in the set. As result, a tf-idf matrix will be built, where documents (movies) are represented as row (horizontal) vectors, and features (keywords) as column (vertical) vectors. Tf means term-frequency while tf–idf means term-frequency times inverse document-frequency. Some keywords will be very present (e.g. <em>war</em>, <em>explosion</em>, <em>terror</em>) hence carrying very little meaningful information about the actual contents of the document. The tf-idf value helps to adjust for the fact that some of those keywords appear more frequently in general.</p>
 			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="https://plot.ly/~polakowo/20.embed"></iframe>
 			<p>The most movies - <span class="Number">73%</span> - aren't similar regarding keywords, meaning that keywords are maybe to concrete for a similarity measure. But, having seen those keywords anywhere, you will be able to identify the movie right away.</p>
 			<table>
