--- a/index.html
+++ b/index.html
@@ -688,10 +688,12 @@
 			<h3><a aria-hidden="true" class="anchor" href="#keywords" id="keywords"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keywords</h3>
 			<p>First of all we will discover keywords provided by IMDB.</p>
 			<h4>Most common</h4>
+			<p>Below we will identify the most common terms in the film industry and visualize them by a word cloud, where the importance of each tag is shown with font size and color.</p>
 			<p><img alt="The most common keywords" src="images/mckwds.png"></p>
 			<p>The most common term is <em>independent-film</em>, a feature film that is produced mostly or completely outside of the major film studio system.</p>
 			<p>Films based on a novel enjoy the popularity.</p>
 			<h4>By genre</h4>
+			<p>Next we group keywords by genre to discover the difference between them.</p>
 			<p><img alt="Most common keywords by genre" src="images/kwdsbygenre.png"></p>
 			<p>More general terms <em>murder</em>, <em>female-nudity</em>, <em>sex</em> and <em>death</em> describe what the most films are about: murders and sex.</p>
 			<p>Keywords provided by IMDB highly correlate with contents of entire genres. The most common words of science fiction are <em>alien</em>, <em>outer-space</em>, <em>monster</em>, and <em>robot</em>. Horror films can be mainly described by terms <em>murder</em>, <em>death</em>, and <em>blood</em>. Terms <em>murder</em> and <em>police</em> are on the top of crime genre. The term <em>murder</em> is also very frequent in dramas. War films commonly show <em>WWII</em> and <em>nazis</em>.</p>
