--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 			<p>Below we will identify the most common terms in the film industry and visualize them by a word cloud, where the importance of each tag is shown with font size and color.</p>
 			<p><img alt="The most common keywords" src="images/mckwds.png"></p>
 			<p>The most common term is <em>independent-film</em>, a feature film that is produced mostly or completely outside of the major film studio system.</p>
-			<p>Films based on a novel enjoy the popularity.</p>
+			<p>Films based on a novel also enjoy the popularity.</p>
 			<h4>By genre</h4>
 			<p>Next we group keywords by genre to discover the difference between them.</p>
 			<p><img alt="Most common keywords by genre" src="images/kwdsbygenre.png"></p>
