--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 			
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
 			<p>Now we are going to dig a little deeper into contents of movies to answer whether there is a correlation between keywords provided by IMDB and plots, and whether actors tend to act in movies of the same contents.</p>
-			<p><strong>Important: As the same calculations are considered both for keywords and plot keywords, we display the analysis of keywords only. For further information see Explainer Notebook.</strong></p>
+			<p><strong>Important: As the same calculations are performed both for keywords and plots, we display the analysis of keywords only. For further information see Explainer Notebook.</strong></p>
 			<h3><a aria-hidden="true" class="anchor" href="#keywords" id="keywords"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keywords</h3>
 			<p>First of all we will discover keywords provided by IMDB.</p>
 			<h4>Most common</h4>
