--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<nav>
 			<li class="fork"><a href="https://github.com/polakowo/oscarobber">View On GitHub</a></li>
 			<li class="fork"><a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></li>
-			<li class="downloads"><a href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
+			<li class="downloads"><a class="zip_download_link" href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
 			<li class="title">DOWNLOAD MONGODB DATA</li>
 		</nav>
 	</div><!-- end header -->
