--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<nav>
 			<li class="fork"><a href="https://github.com/polakowo/oscarobber">View On GitHub</a></li>
 			<li class="fork"><a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></li>
-			<li class="downloads"><a href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
+			<li class="downloads"><a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">ZIP</a></li>
 			<li class="title">DOWNLOAD MONGODB DATA</li>
 		</nav>
 	</div><!-- end header -->
@@ -242,7 +242,8 @@
 				</tbody>
 			</table>
 			<p><em>Hint: Many collections having string values are encoded with integers to save some space, so we introduce collections ending by "_map" to get the initial strings values. Don't be scared if you see something like that, it's actually pretty awesome!</em></p>
-			<p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from <span class="Number">12GB</span> to <span class="Number">1GB</span>. You can download the complete MongoDB database by clicking <strong>ZIP</strong> button above.</p>
+			<p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from <span class="Number">12GB</span> to <span class="Number">1GB</span></p>
+			<p>You can download the complete MongoDB database by clicking <strong>ZIP</strong> button above. Use command <code>mongod --dbpath data/db</code></p>
 			
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#network-analysis" id="network-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
@@ -750,6 +751,18 @@
 			<p>We expect both keywords and plots to be somewhat correlated, as plots describe the same contents but in a different, more readable for humans, way. We use a scatterplot to plot similarity on keywords versus similarity on plot keywords below.</p>
 			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="https://plot.ly/~polakowo/22.embed"></iframe>
 			<p>Plots and keywords are weakly correlated.</p>
+			<h3><a aria-hidden="true" class="anchor" href="#user-reviews" id="user-reviews"><span aria-hidden="true" class="octicon octicon-link"></span></a>User reviews</h3>
+			<p>We will apply sentiment analysis to identify and extract subjective information in user reviews.</p>
+			<blockquote>
+				<p>Sentiment analysis (also known as opinion mining) refers to the use of natural language processing, text analysis and computational linguistics to identify and extract subjective information in source materials.</p>
+			</blockquote>
+			<p>Sentiments of user reviews follow normal distribution.</p>
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="https://plot.ly/~polakowo/24.embed"></iframe>
+			Sentiment analysis produces many errors, e.g., the user review classified as the second most positive is in fact negative. This because the LabMT wordlist contains only labeled words, not compounds, so the algorithm cannot detect a negotiation or sarcasm.
+			We cannot discover any correlation between sentiment and release year, runtime, budget, and gross. Good and bad films are made every year, and are not depending upon runtime, budget or gross. Reviews are always a matter of taste.
+			The most common keywords are movie, film, good, and time.
+			The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.
+			Sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
