--- a/index.html
+++ b/index.html
@@ -758,12 +758,12 @@
 			</blockquote>
 			<p>Sentiments of user reviews follow normal distribution.</p>
 			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="https://plot.ly/~polakowo/24.embed"></iframe>
-			Sentiment analysis produces many errors, e.g., the user review classified as the second most positive is in fact negative. This because the LabMT wordlist contains only labeled words, not compounds, so the algorithm cannot detect a negotiation or sarcasm.
-			We cannot discover any correlation between sentiment and release year, runtime, budget, and gross. Good and bad films are made every year, and are not depending upon runtime, budget or gross. Reviews are always a matter of taste.
+			<p>Sentiment analysis produces many errors, e.g., the user review classified as the second most positive is in fact negative. This because the LabMT wordlist contains only labeled words, not compounds, so the algorithm cannot detect a negotiation or sarcasm.</p>
+			<p>We cannot discover any correlation between sentiment and release year, runtime, budget, and gross. Good and bad films are made every year, and are not depending upon runtime, budget or gross. Reviews are always a matter of taste.</p>
 			<p><img alt="Negative and positive keywords" src="images/kwdssentmc.png"></p>
-			The most common keywords are movie, film, good, and time.
-			The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.
-			Sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.
+			<p>The most common keywords are movie, film, good, and time.</p>
+			<p>The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.</p>
+			<p>Sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
