--- a/index.html
+++ b/index.html
@@ -759,10 +759,14 @@
 			<p>Sentiments of user reviews follow normal distribution.</p>
 			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="https://plot.ly/~polakowo/24.embed"></iframe>
 			<p>Sentiment analysis produces many errors, e.g., the user review classified as the second most positive is in fact negative. This because the LabMT wordlist contains only labeled words, not compounds, so the algorithm cannot detect a negotiation or sarcasm.</p>
-			<p>We cannot discover any correlation between sentiment and release year, runtime, budget, and gross. Good and bad films are made every year, and are not depending upon runtime, budget or gross. Reviews are always a matter of taste.</p>
-			<p><img alt="Negative and positive keywords" src="images/kwdssentmc.png"></p>
+			<p>We also cannot discover any correlation between sentiment and release year, runtime, budget, and gross. Good and bad films are made every year, and are not depending upon runtime, budget or gross. Reviews are always a matter of taste.</p>
+			<h4>Terms</h4>
+			<p><img alt="Most common terms in user reviews" src="images/kwdssentmc.png"></p>
 			<p>The most common keywords are movie, film, good, and time.</p>
 			<p>The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.</p>
+			<h4>Adjectives</h4>
+			<p>Below are shown most common adjectives in top 250 most negative and positive user reviews.</p>
+			<p><img alt="Negative and positive keywords" src="images/adjsentmc.png"></p>
 			<p>Sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
