--- a/index.html
+++ b/index.html
@@ -767,6 +767,7 @@
 			<h4>Adjectives</h4>
 			<p>Below are shown most common adjectives in top 250 most negative and positive user reviews.</p>
 			<p><img alt="Negative and positive keywords" src="images/adjsentmc.png"></p>
+			<p>Not suprising: the adjectives <em>bad</em> and <em>good</em> top the lists. That's the most loved expressions used by users.</p>
 			<p>Sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
