--- a/index.html
+++ b/index.html
@@ -768,7 +768,9 @@
 			<p>Below are shown most common adjectives in top 250 most negative and positive user reviews.</p>
 			<p><img alt="Negative and positive keywords" src="images/adjsentmc.png"></p>
 			<p>Not suprising: the adjectives <em>bad</em> and <em>good</em> top the lists. That's the most loved expressions used by users.</p>
-			<p>Sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
+			<p>In general, sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
+			<h2><a aria-hidden="true" class="anchor" href="#further-information" id="further-information"><span aria-hidden="true" class="octicon octicon-link"></span></a>Further information</h2>
+			<p>A lot of information was skipped to shrink the size of the webpage, thus you are welcome to continue the reading in the Explainer Notebook</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
