--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
 			<blockquote>
-				<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
+				<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></p>
 			</blockquote>
 			<p><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</p>
 			<p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</p>
@@ -687,7 +687,7 @@
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
 			<p>Now we are going to dig a little deeper into contents of movies to answer whether there is a correlation between keywords provided by IMDB and plots, and whether actors tend to act in movies of the same contents.</p>
-			<p><strong>Important: As the same calculations are performed both for keywords and plots, we display the analysis of keywords only. For further information see Explainer Notebook.</strong></p>
+			<p><strong>Important: As the same calculations are performed both for keywords and plots, we display the analysis of keywords only. For further information see <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></strong></p>
 			<h3><a aria-hidden="true" class="anchor" href="#keywords" id="keywords"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keywords</h3>
 			<p>First of all we will discover keywords provided by IMDB.</p>
 			<h4>Most common</h4>
