--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 			</table>
 			<p><em>Hint: Many collections having string values are encoded with integers to save some space, so we introduce collections ending by "_map" to get the initial strings values. Don't be scared if you see something like that, it's actually pretty awesome!</em></p>
 			<p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from <span class="Number">12GB</span> to <span class="Number">1GB</span></p>
-			<p>You can download the complete MongoDB database by clicking <strong>ZIP</strong> button above. Use command <code>mongod --dbpath data/db</code></p>
+			<p>You can download the complete MongoDB database <a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">here</a>. Use command <code>mongod --dbpath data/db</code></p>
 			
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#network-analysis" id="network-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
@@ -771,7 +771,7 @@
 			<p>In general, sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#further-information" id="further-information"><span aria-hidden="true" class="octicon octicon-link"></span></a>Further information</h2>
-			<p>A lot of information was skipped to shrink the size of the webpage, thus you are welcome to continue the reading in the <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></p>
+			<p>A lot of information was skipped to shrink the size of the webpage, thus you are welcome to continue the reading in the <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a>. You may also be interested in testing the things out, for this, clone the <a href="https://github.com/polakowo/oscarobber">repository</a>, download and import <a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">the MongoDB data</a>, and enjoy. </p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
