--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 			</table>
 			<p><em>Hint: Many collections having string values are encoded with integers to save some space, so we introduce collections ending by "_map" to get the initial strings values. Don't be scared if you see something like that, it's actually pretty awesome!</em></p>
 			<p>Using filtering and intelligent mapping we were able to shrink the total size of IMDB data from <span class="Number">12GB</span> to <span class="Number">1GB</span></p>
-			<p>You can download the complete MongoDB database <a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">here</a>. Use command <code>mongod --dbpath data/db</code></p>
+			<p>You can download the complete MongoDB database <a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">here</a>. Use command <code>mongod --dbpath data/db</code> to import data into MongoDB instance.</p>
 			
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#network-analysis" id="network-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
