--- a/index.html
+++ b/index.html
@@ -771,7 +771,8 @@
 			<p>In general, sentiments are not precise. Negotiations may provide some problems when classifying data. Extending the wordlist by compounds may be a solution, whereby one very difficult to implement.</p>
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#further-information" id="further-information"><span aria-hidden="true" class="octicon octicon-link"></span></a>Further information</h2>
-			<p>A lot of information was skipped to shrink the size of the webpage, thus you are welcome to continue the reading in the <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a>. You may also be interested in testing the things out, for this, clone the <a href="https://github.com/polakowo/oscarobber">repository</a>, download and import <a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">the MongoDB data</a>, and enjoy. </p>
+			<p>A lot of information was skipped to shrink the size of the webpage, thus you are welcome to continue the reading in the <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></p>
+			<p>You may also be interested in testing the things out, for this, clone the <a href="https://github.com/polakowo/oscarobber">repository</a>, download and import <a href="https://media.githubusercontent.com/media/polakowo/oscarobber/master/mongodb/mongo_imdb.zip">the MongoDB data</a>, and enjoy. </p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
