--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 			<p>Sentiment analysis produces many errors, e.g., the user review classified as the second most positive is in fact negative. This because the LabMT wordlist contains only labeled words, not compounds, so the algorithm cannot detect a negotiation or sarcasm.</p>
 			<p>We also cannot discover any correlation between sentiment and release year, runtime, budget, and gross. Good and bad films are made every year, and are not depending upon runtime, budget or gross. Reviews are always a matter of taste.</p>
 			<h4>Terms</h4>
-			<p>Below the most common terms in user reviews are displayed.</p>
+			<p>Below the most common terms across user reviews are displayed.</p>
 			<p><img alt="Most common terms in user reviews" src="images/kwdssentmc.png"></p>
 			<p>The most common keywords are movie, film, good, and time.</p>
 			<p>The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.</p>
