--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
 			<h4>Terms</h4>
 			<p>Below the most common terms across user reviews are displayed.</p>
 			<p><img alt="Most common terms in user reviews" src="images/kwdssentmc.png"></p>
-			<p>The most common keywords are movie, film, good, and time.</p>
+			<p>The most common keywords are <em>movie</em>, <em>film</em>, <em>good</em>, and <em>time</em></p>
 			<p>The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.</p>
 			<h4>Adjectives</h4>
 			<p>Below are shown most common adjectives in top 250 most negative and positive user reviews.</p>
