--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			<blockquote>
 				<p>The collaboration graph of movies and actors is called co-stardom network. Bipartite graph <strong>Bip=(M,A,E)</strong> will have two node sets <strong>M - movies</strong>, <strong>A - actors</strong> and edges in <strong>E</strong> that only connect nodes from opposite sets. <strong>M</strong> is connected to <strong>A</strong> if <strong>A</strong> has played in <strong>M</strong>. Hence there are no direct <strong>M - M</strong> or <strong>A - A</strong> links.</p>
 			</blockquote>
-			<p>The following properties refer to bipartite network of science fiction movies only.</p>
+			<p>The following properties refer to bipartite network of science fiction movies.</p>
 			<table>
 				<thead>
 					<tr>
