--- a/index.html
+++ b/index.html
@@ -520,12 +520,14 @@
 					</tr>
 				</tbody>
 			</table>
-			<p>Actors tend to play in movies which are released within a couple of years.</p>
-			<p>Actors act preferentially in movies where the same language is spoken.</p>
-			<p>Actors tend to act in movies produced in the same country.</p>
-			<p>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</p>
-			<p>Actors tend to act both in short and long movies.</p>
-			<p>Actors show no preference towards some particular production company or director.</p>
+			<ul>
+				<li>Actors tend to play in movies which are released within a couple of years.</li>
+				<li>Actors act preferentially in movies where the same language is spoken.</li>
+				<li>Actors tend to act in movies produced in the same country.</li>
+				<li>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</li>
+				<li>Actors tend to act both in short and long movies.</li>
+				<li>Actors show no preference towards some particular production company or director.</li>
+			</ul>
 			<h4>Assortativity towards actor attributes</h4>
 			<table>
 				<thead>
@@ -558,10 +560,12 @@
 					</tr>
 				</tbody>
 			</table>
-			<p>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</p>
-			<p>Actors who were born in same country tend to act together.</p>
-			<p>Well-known actors tend to act with other well-known actors.</p>
-			<p>Height has no impact on decisions of companies to hire somebody or not.</p>
+			<ul>
+				<li>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</li>
+				<li>Actors who were born in same country tend to act together.</li>
+				<li>Well-known actors tend to act with other well-known actors.</li>
+				<li>Height has no impact on decisions of companies to hire somebody or not.</li>
+			</ul>
 			<h3><a aria-hidden="true" class="anchor" href="#communities" id="communities"><span aria-hidden="true" class="octicon octicon-link"></span></a>Communities</h3>
 			<blockquote>
 				<p>Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules.</p>
