--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<p>Main discoveries:</p>
 			<ul>
 				<li>Actors tend to play in movies which are released within a couple of years.</li>
 				<li>Actors act preferentially in movies where the same language is spoken.</li>
@@ -560,6 +561,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<p>Main discoveries:</p>
 			<ul>
 				<li>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</li>
 				<li>Actors who were born in same country tend to act together.</li>
