--- a/index.html
+++ b/index.html
@@ -769,8 +769,7 @@
 			<h4>Terms</h4>
 			<p>Below the most common terms across user reviews are displayed.</p>
 			<p><img alt="Most common terms in user reviews" src="images/kwdssentmc.png"></p>
-			<p>The most common keywords are <em>movie</em>, <em>film</em>, <em>good</em>, and <em>time</em></p>
-			<p>The most trigrams contain bigram ever seen; expressions like that indicate that the movie made a big impression on the viewer.</p>
+			<p>The most common keywords are <em>movie</em>, <em>film</em>, <em>good</em>, and <em>time</em>. The 3 most frequent bigrams are <em>(ever, seen)</em>, <em>(special, effects)</em>, and <em>(even, though)</em>; the most common trigrams are <em>(movie, ever, seen)</em>, <em>(worst, movie, ever)</em>, and <em>(movies, ever, seen)</em>, and contain bigram <em>(ever, seen)</em>; expressions like that indicate that the movie made a big impression on the viewer.</p>
 			<h4>Adjectives</h4>
 			<p>Below are shown most common adjectives in top 250 most negative and positive user reviews.</p>
 			<p><img alt="Negative and positive keywords" src="images/adjsentmc.png"></p>
