--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
 			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
+			<p>Below we list the most interesting insights we've got by analyzing the co-stardom network. If you are ready enough to get into the details, look into Explainer Notebook, where every analysis step from A to Z is explained.</p>
 			<blockquote>
 				<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in <a href="http://nbviewer.jupyter.org/github/polakowo/oscarobber/blob/master/jupyter/Assignment-Home.ipynb">Explainer Notebook</a></p>
 			</blockquote>
